In the 'must-see' list, wrapped the prohibition eye/eye icon in a button element so that the pointer renders properly and updated 'toggleSeen' function to account for new button element. Also added and updated the button container and its children's css rule sets to ensure design aligned with wireframe. #4

--- a/css/styles.css
+++ b/css/styles.css
@@ -129,9 +129,22 @@ i.fa-check {
   right: 25px;
 } */
 
-.seen-button {
-  position: relative;
-  right: 25px;
+.align-items-center {
+  align-items: center;
+}
+
+.gap-15 {
+  gap: 15px;
+}
+
+.toggle-seen-button {
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+
+.toggle-seen-button:hover {
+  cursor: pointer;
 }
 
 .met-blue {
